# SimpleDrawer

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  airdox_.py  beet-artifact.yaml  beet-dev.yaml  beet-release.yaml  beet-releases.yaml  beet.yaml  beet_watch.bat  beet_watch.sh  common.yaml  developers.md  disable.html  genindex.html  guide.py  index.html  make_release.json  make_release.py  material.html  md_to_bbcode.py  mklink.bat  objects.inv  pack.py  plan.md  pyproject.toml  search.html  searchindex.js  simpledrawer.py  stable_cache.json  versions.json
.doctrees/: disable.doctree  environment.pickle  index.doctree  material.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: artifact.py  artifact.yml  check-commands.yml  documentation.yml  download_files.py  modrinth_update.yml  push-last-release-to-smithed.yml  push-to-modrinth.py  push-to-smithed.py  release.sh  release.yml  update_last_release.py  update_versions.py
SimpleDrawer DataPack/: pack.mcmeta
SimpleDrawer DataPack/data/global/advancements/: airdox_.json
SimpleDrawer DataPack/data/simpledrawer/advancements/: click.json  click_item_frame.json  diamond_upgrade_craft.json  drawer_place.json  drawer_place_old.json  gold_upgrade_craft.json  guide_craft.json  hopper_upgrade_craft.json  root.json
SimpleDrawer DataPack/data/simpledrawer/dimension/: intern.json
SimpleDrawer DataPack/data/simpledrawer/functions/: 8tick.mcfunction  _give.mcfunction  book.mcfunction  click_item_frame.mcfunction  give.mcfunction  guide.json  load.mcfunction  load_2.mcfunction  print_version.mcfunction  real_tick.mcfunction  rename_tag.mcfunction  set_version.mcfunction  summon.mcfunction  test_load.mcfunction  tick.mcfunction  tick_2.mcfunction  tick_drawerblock.mcfunction  tick_draweritem.mcfunction  unforceload_try.mcfunction  uninstall.mcfunction
SimpleDrawer DataPack/data/simpledrawer/item_modifiers/: base.json  destroy_display.json  destroy_display_filled_id.json  destroy_display_filled_name.json  drawer_display.json  get_pos.json  remove_1.json  selected_item.json  set_count.json
SimpleDrawer DataPack/data/simpledrawer/loot_tables/: all_items.json  output.json
SimpleDrawer DataPack/data/simpledrawer/predicates/: air_blocks.json  as_same_drawer_id.json  check_hopper.json  destroyer.json  destroyer_barrel.json  is_drawer.json  is_looking_me.json  is_summoned_drawer.json  not_rotated.json  shulker_box_around.json  stack1.json  stack16.json  unless_moving_piston.json
SimpleDrawer DataPack/data/simpledrawer/recipes/: guide_craft.json  hopper_upgrade_craft.json  netherite_upgrade_craft.json  star_upgrade_craft.json
SimpleDrawer ResourcePack/: pack.mcmeta
SimpleDrawer ResourcePack/assets/minecraft/lang/: en_us.json  fr_fr.json
SimpleDrawer ResourcePack/assets/simpledrawer/font/: font.json  gui.json
SimpleDrawer ResourcePack/assets/simpledrawer/lang/: en_us.json  fr_fr.json
SimpleDrawer RessourcePack/: pack.mcmeta
SimpleDrawer RessourcePack/assets/simpledrawer/font/: font.json
_sources/: disable.md.txt  material.md.txt
_static/: pygments.css
_static/css/: custom.css
assets/minecraft/item/: jigsaw.json
assets/minecraft/models/item/: barrel.json  beehive.json  beehive.py  beehive_init.json  coal.json  copper_ingot.json  diamond.json  emerald.json  furnace.json  furnace.py  furnace_init.json  generate_model.py  gold_ingot.json  (+6 more)
assets/simpledrawer/font/: big.json  font.json  gui.json  medium.json
assets/simpledrawer/items/: diamond_upgrade.json  guide.json  netherite_upgrade.json  star_upgrade.json
assets/simpledrawer/lang/: en_us.json  fr_fr.json  print_all.py
data/dork.base64/functions/: load.mcfunction
data/dork.base64/structures/: encoder_chars.nbt
data/drawer/advancements/: advancement.json  click_item_frame.json  diamond_upgrade_craft.json  downgrade_wand_craft.json  drawer_craft.json  gold_upgrade_craft.json  hopper_upgrade_craft.json  iron_upgrade_craft.json  netherite_upgrade_craft.json  star_upgrade_craft.json
data/drawer/functions/: click_item_frame.mcfunction  give.mcfunction  summon.mcfunction  tick.mcfunction
data/drawer/item_modifiers/: base.json  generate.py  get_pos.json
data/drawer/recipes/: diamond_upgrade_craft.json  downgrade_wand_craft.json  gold_upgrade_craft.json  hopper_upgrade_craft.json  iron_upgrade_craft.json
data/simpledrawer/advancements/: advancement.json  attack.json  click.json  click_item_frame.json  diamond_upgrade_craft.json  downgrade_wand_craft.json  drawer_craft.json  gold_upgrade_craft.json  hopper_upgrade_craft.json  interact.json  iron_upgrade_craft.json  netherite_upgrade_craft.json  new_click.json  star_upgrade_craft.json
data/simpledrawer/functions/: click_item_frame.mcfunction  give.mcfunction  load.mcfunction  summon.mcfunction  tick.mcfunction
data/simpledrawer/item_modifiers/: destroy_display_filled_name_multiple.json  set_count.json  set_count_output.json
data/simpledrawer/messages/: player_config.json
data/simpledrawer/predicates/: fixed_free_blocks.json  search_id_new_drawer.json  shulker_box_around.json
data/simpledrawer/recipe/: guide.json
data/simpledrawer/recipes/: drawer_craft.json
data/simpledrawer/trim_material/: acacia.json  bamboo.json  birch.json  cherry.json  compacting.json  crimson.json  dark_oak.json  ice.json  jungle.json  mangrove.json  oak.json  spruce.json  warped.json
docs/: Makefile  conf.py  disable.md  index.md  material.md
example_material/: pack.mcmeta
images/: banner.xcf  compacting_drawer.xcf  simple_drawer.xcf  upgrades.xcf  visuel simpledrawer.xcf
images/logo/: model.bbmodel
release/: _regenerate.py
release/all-bundled/: beet.yaml
release/all-bundled-artifact/: beet.yaml
release/included/: _regenerate.py
release/no-bundled/: beet.yaml
release/no-bundled-artifact/: beet.yaml
releases/all-bundled/: beet.yaml
releases/no-bundled/: beet.yaml
simpledrawer/: __init__.py  airdox_.py  guide.py  new_drawer_model.py  pack.py  plugin.py  semantic_release.py  simpledrawer.py
templates/.components/: first_release.md.j2  versioned_changes.md.j2
(+15088 files in other folders)
