[tool.poetry]
name = "simpledrawer"
version = "2.6.1"
description = ""
authors = ["edayot <pro.e.dayot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
simple-item-plugin = ">=0.9.1"

[tool.poetry.dev-dependencies]
python-semantic-release = "^8.7.0"

[tool.semantic_release]
major_on_zero = false
build_command = '''
    beet -s data_pack.zipped=true \
         -s resource_pack.zipped=true \
         -s meta.weld_deps.enabled=true && \
         -s data_pack.name="{{ project_id }}_{{ project_version }}_dp_bundled" \
         -s resource_pack.name="{{ project_id }}_{{ project_version }}_rp_bundled"
    beet -s data_pack.zipped=true \
         -s resource_pack.zipped=true \
         -s meta.weld_deps.enabled=false \
         -s data_pack.name="{{ project_id }}_{{ project_version }}_dp" \
         -s resource_pack.name="{{ project_id }}_{{ project_version }}_rp"
'''
dist_path = "build"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_source = "commit"

remove_dist = false
tag_format = "v{version}"


[tool.semantic_release.publish]
dist_glob_patterns = ["build/*.zip"]
upload_to_vcs_release = true














[tool.beet]
output = "build"

pipeline = [
    "simple_item_plugin",
    "simpledrawer",
]
require=[
    "bolt",
    "weld_deps",
    "mecha.contrib.relative_location",
    "mecha.contrib.nested_location",
    "simpledrawer.airdox_.add_tests_directory",
    "simpledrawer.airdox_.allow_function_without_name",
    "mecha.contrib.messages",
    "bolt",
]

ignore = [
    "stable_cache.json"
]

[tool.beet.data_pack]
name = "{{ project_id }}_{{ project_version }}_dp_bundled"
load = "src"
pack_format = 71

[tool.beet.resource_pack]
name = "{{ project_id }}_{{ project_version }}_rp_bundled"
load = "src"
pack_format = 55


[tool.beet.meta]
mc_supports = ["1.21.5"]
mc_supports_dataversion = [4325]
minecraft_version = "1.21.5"
modrinth_id = "JmCxCKiW"



[tool.beet.meta.simple_item_plugin]
generate_guide = true
items_on_first_page = true
creator = "airdox_"
prefix_namespace_with_creator = true
item_for_pack_png = "new_drawer"
tick_function = "simpledrawer:impl/tick"
load_function = "simpledrawer:impl/load"



[tool.beet.meta.mecha]
multiline = true
match = ["simpledrawer:**"]


[tool.beet.meta.model_resolver]
render_size = 256
load_vanilla = true
save_namespace = "grappling_hook"
minecraft_version = "1.21.5"



[tool.beet.meta.smithed.versioning]
scheduled_paths=["impl/tick", "impl/5tick"]

[tool.beet.meta.smithed.versioning.lantern_load]
step="load"
tag_path="load"
function_path="impl/test_load"

[tool.beet.meta.smithed.versioning.refactor]
match="{{ project_id }}:*"
find="{{ project_id }}:impl/"
replace="{{ project_id }}:v{{ version }}/"


[tool.beet.meta.smithed.versioning.api]
match="{{ project_id }}:v{{ version }}"
implementation_prefix="{{ project_id }}:v{{ version }}/"
version_check_path="v{{ version }}/calls"
tag_path="calls"




[[tool.beet.meta.weld_deps.deps]]
id = "itemio"
version = "1.4.0"
source = "smithed"
[tool.beet.meta.weld_deps.deps.versioning]
type = "normal"
prefix = "#itemio"

[[tool.beet.meta.weld_deps.deps]]
id = "crafter"
version = "0.7.0"
source = "smithed"
[tool.beet.meta.weld_deps.deps.versioning]
type = "normal"
prefix = "#smithed.crafter"

[[tool.beet.meta.weld_deps.deps]]
id = "custom-block"
version = "0.7.0"
source = "smithed"
[tool.beet.meta.weld_deps.deps.versioning]
type = "normal"
prefix = "#smithed.custom_block"


[[tool.beet.meta.weld_deps.deps]]
id = "custom_block_ext"
version = "0.2.0"
source = "smithed"
[tool.beet.meta.weld_deps.deps.versioning]
type = "normal"
prefix = "#custom_block_ext"



