[project]
name = "simpledrawer"
version = "2.8.0"
description = "Python project for SimpleDrawer Minecraft datapack"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beet>=0.113.0b10",
    "bolt>=0.50.0b5",
    "mecha>=0.102.0b2",
    "simple-item-plugin>=0.29.1",
    "stewbeet>=2.4.0",
    "weld-deps>=0.15.0",
]

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.0",
]

[tool.uv]
override-dependencies = ["click>=8.3.1"]

# [tool.uv.sources]
# simple-item-plugin = { path = "../simple_item_plugin", editable = true }
# weld-deps = { path = "../weld-deps", editable = true }





[tool.semantic_release]
major_on_zero = false
build_command = '''
    beet -s data_pack.zipped=true \
         -s resource_pack.zipped=true \
         -s meta.weld_deps.enabled=true \
         -s data_pack.name="{{ project_id }}_{{ project_version }}_dp_bundled" \
         -s resource_pack.name="{{ project_id }}_{{ project_version }}_rp_bundled"
    beet -s data_pack.zipped=true \
         -s resource_pack.zipped=true \
         -s meta.weld_deps.enabled=false \
         -s data_pack.name="{{ project_id }}_{{ project_version }}_dp" \
         -s resource_pack.name="{{ project_id }}_{{ project_version }}_rp"
'''
build_command_env = [
    "LIBGL_ALWAYS_SOFTWARE",
    "DISPLAY",
]
dist_path = "build"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "beet.yaml:version",
]
version_source = "commit"

remove_dist = false
tag_format = "v{version}"


[tool.semantic_release.publish]
dist_glob_patterns = ["build/*.zip"]
upload_to_vcs_release = true


[tool.semantic_release.changelog]
template_dir = "templates"


[project.scripts]
"simpledrawer.semantic_release" = "simpledrawer.semantic_release:main"
